added code to readme

--- a/ApiBiblioteca/src/main/resources/templates/users.html
+++ b/ApiBiblioteca/src/main/resources/templates/users.html
@@ -8,9 +8,9 @@
 
 <form action="/users" method ="POST">
 
-  <p>Gracias, haz cliclk en volver para ir al index</p>
+  <p>Gracias, haz click en volver para ir al index</p>
   <button type="submit" class="btn btn-primary">Vovler</button>
-  
+
 </form>
 
 </body>
